<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">FRR/FAR指标测试</string>

    <string name="main_test_option_title">测试选项</string>
    <string name="main_test_item_frr">拒真率(FRR)测试</string>
    <string name="main_test_item_far">认假率(FAR)测试</string>

    <string name="main_finger_manager_title">指纹管理</string>
    <string name="main_finger_item_exist">已有指纹</string>
    <string name="main_finger_item_new">新建指纹</string>
    <string name="main_finger_item_settings">指纹设置</string>
    <string name="main_finger_item_report">测试报告</string>
    <string name="main_finger_item_about">版本信息</string>

    <string name="about_info_test_title">测试软件:</string>
    <string name="about_info_hal_title">HAL版本：</string>
    <string name="about_info_dev_title">驱动版本：</string>
    <string name="about_info_algo_title">算法版本：</string>
    <string name="about_info_ta_title">TA版本：</string>

    <string name="enroll_env_set_title">录入环境</string>
    <string name="enroll_env_set_userid_title">用户编号</string>
    <string name="enroll_env_set_start_enroll">开始录入</string>
    <string name="enroll_env_set_start_gather">"开始采集图像"</string>

    <string name="enrolling_image_quality_title">图像质量:</string>
    <string name="enrolling_effective_area_title">有效面积:</string>
    <string name="enrolling_image_num_title">"请录入第<xliff:g id="count" example="1">%1$d</xliff:g>张"</string>
    <string name="enrolling_image_num_finish_title">已录入完成</string>
    <string name="enrolling_sample_pb_title">图像</string>
    <string name="enrolling_btn_next_finger_title">录入下一手指</string>
    <string name="enrolling_btn_plastic_finger_title">录入塑料假手指</string>
    <string name="enrolling_btn_reenroll_title">重录上一张</string>
    <string name="enrolling_begin_enroll_info">开始录入<xliff:g id="who" example="0001L1">%1$s</xliff:g>指纹</string>
    <string name="enrolling_image_save_succeed">图像保存成功:<xliff:g id="path">%1$s</xliff:g></string>
    <string name="enrolling_image_save_failed">图像保存失败:<xliff:g id="path">%1$s</xliff:g></string>
    <string name="enrolling_image_re_enroll_last_image">重新录入第<xliff:g id="count" example="1">%1$d</xliff:g>张指纹</string>

    <string name="finger_settings_enroll_title">录入设置</string>
    <string name="finger_settings_enroll_sample_count_title">录入图像总数</string>
    <string name="finger_settings_enroll_finger_title">需录入的手指</string>
    <string name="finger_settings_enroll_data_path_title">数据保存目录</string>
    <string name="finger_settings_test_title">测试设置</string>
    <string name="finger_settings_test_farfrr_img_result_title">FRR/FAR测试</string>
    <string name="finger_settings_test_farfrr_img_result_desc">FRR/FAR测试保存每个图像的测试结果</string>
    <string name="finger_settings_test_far_run_frr_first_title">FAR测试</string>
    <string name="finger_settings_test_far_run_frr_first_desc">运行FAR测试时，先跑FRR更新模板（不记录FRR结果）</string>
    <string name="finger_settings_test_gather_finger_title">"采集图像"</string>
    <string name="finger_settings_test_gather_finger_desc">"采集图像时保存的图像为算法处理后的图像（不勾选为原始图）"</string>

    <string name="frrfar_test_info_wait_test">等待开始</string>
    <string name="frrfar_test_info_testing">正在测试</string>
    <string name="frrfar_test_info_test_finish">测试完成</string>
    <string name="frrfar_test_result_fail_times_title">失败次数:</string>
    <string name="frrfar_test_result_fail_title">测试结果:</string>
    <string name="frrfar_test_result_target_title">技术指标:</string>
    <string name="frrfar_test_start_btn_title">开始测试</string>
    <string name="frrfar_test_report_btn_title">测试报告</string>
    <string name="frrfar_test_again_btn_title">重新测试</string>
    <string name="frrfar_test_frr_result_target_info">该测试结果应小于1%</string>
    <string name="frrfar_test_far_result_target_info">该测试结果应小于0.002%</string>
    <string name="frrfar_test_current_image_info">已加载<xliff:g id="name">%1$s</xliff:g></string>
    <string name="frrfar_test_load_tpl_time">录入模板---Total:<xliff:g id="total">%1$d</xliff:g>(ms) Avg:<xliff:g id="avg">%2$.2f</xliff:g>(ms)</string>
    <string name="frrfar_test_auth_success_time">匹配成功---Total:<xliff:g id="total">%1$d</xliff:g>(ms) Avg:<xliff:g id="avg">%2$.2f</xliff:g>(ms)</string>
    <string name="frrfar_test_auth_failed_time">匹配失败---Total:<xliff:g id="total">%1$d</xliff:g>(ms) Avg:<xliff:g id="avg">%2$.2f</xliff:g>(ms)</string>
    <string name="frrfar_test_tpl_upd_time">更新模板---Total:<xliff:g id="total">%1$d</xliff:g>(ms) Avg:<xliff:g id="avg">%2$.2f</xliff:g>(ms)</string>

    <string name="globle_back_btn_title">返回</string>
    <string name="globle_not_found_service">未找到相关资源/服务</string>

    <string name="unknow">未知</string>
    <string name="globle_err_not_found_service">未找到相关资源/服务</string>
    <string name="globle_err_data_invalide">数据不完整</string>
    <string name="globle_err_bad_param">参数无效，操作被取消</string>
    <string name="globle_err_move_to_fast">请勿快速移动手指</string>
    <string name="globle_err_enroll_same_area">录入模板中，录入区域重复，请移动手指重新录入。</string>
    <string name="globle_err_enroll_quality_fail">指纹图片的质量不达标，请重新录入。</string>
    <string name="globle_err_enroll_coverarea_fail">指纹图片的覆盖率不达标，请重新录入。</string>
    <string name="globle_err_enroll_quality_coverarea_fail">指纹图片的质量和覆盖率都不达标，请重新录入。</string>
    <string name="globle_err_enroll_fake_finger">检测为无效指纹，请重新录入。</string>
    <string name="globle_err_enroll_gain_improve_timeout">调图失败，请重新尝试录入。</string>
    <string name="globle_err_canceled">操作被取消</string>

</resources>
