<?xml version="1.0" encoding="UTF-8"?>
<!-- this layout is used by EnrollingActivity & GatherActivity -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FF000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/enrolling_items_interval"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/enrolling_finish_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/globle_back_btn_title" />

        <Button
            android:id="@+id/enrolling_plastic_finger_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enrolling_btn_plastic_finger_title" />

        <Button
            android:id="@+id/enrolling_reenroll_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enrolling_btn_reenroll_title" />

        <Button
            android:id="@+id/enrolling_next_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/enrolling_btn_next_finger_title" />
    </LinearLayout>

    <TextView
        android:id="@+id/enrolling_info_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:minLines="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/enrolling_items_interval"
        android:layout_marginBottom="50dp"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:text="@string/enrolling_image_quality_title" />
            <TextView
                android:id="@+id/enrolling_image_quality_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/enrolling_effective_area_title"
                android:textColor="#FFFFFF" />
            <TextView
                android:id="@+id/enrolling_effective_area_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/enrolling_items_interval"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/enrolling_sample_pb_title"
                android:textColor="@color/white" />

            <com.silead.frrfar.NumberProgressBar
                android:id="@+id/enrolling_sample_progressbar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5" />
        </LinearLayout>
        <ImageView
            android:id="@+id/enrolling_finger_imageview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/shape_gray_square_bg"
            android:padding="10dp"
            android:contentDescription="@string/enrolling_sample_pb_title" />

    </LinearLayout>

    <TextView
        android:id="@+id/enrolling_num_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/enrolling_items_interval"
        android:gravity="center"
        android:textColor="@color/white" />

</LinearLayout>